# foobar-grid-view

./: .gitignore  BUILD_V10_0_4_SIMPLE.bat  BUILD_V10_0_5_SHUTDOWN_FIX.bat  BUILD_V8.bat  BUILD_V94_FINAL.bat  BUILD_V95_FROM_94.bat  BUILD_V97_ENHANCED.bat  BUILD_V98_SEARCH.bat  BUILD_V998_ENHANCED.bat  BUILD_V999_FINAL_CLEAN.bat  BUILD_V99_FINAL_FIXED.bat  CHANGELOG.md  CMakeLists.txt  CREATE_GITHUB_RELEASE_V9810.bat  FORUM_ANNOUNCEMENT_V97.txt  FORUM_UPDATE_V95.txt  INSTALL_V10_0_5_SAFE.bat  INSTALL_V999.bat  INSTRUCTIONS_V998.txt  LICENSE  PACKAGE_V96.bat  PACKAGE_V97.bat  PROJECT_STATE_V10_0_17.md  PROJECT_STATUS_V996.md  README.md  README_COMPILE.md  RELEASE_FLOW.md  RELEASE_NOTES_V989.md  VERSION_SWITCHING_FIX.md  build_v10_0_18_FINAL.ps1  build_v10_0_18_MPV_COMPATIBLE.ps1  build_v10_0_18_MPV_FINAL_FIX.ps1  build_v10_0_18_MPV_RETRY_FIX.ps1  build_v10_0_26_DEDICATED_PLAYLIST.ps1  build_v10_0_35_PLAYLIST_OVERLAY.ps1  build_v10_0_49_SMART_GRID_FLOW_HYBRID.ps1  build_with_library_viewer.ps1  component_version.rc  foo_albumart_grid.def  foo_albumart_grid_v10_0_10_safe.fb2k-component  (+92 more)
.github/workflows/: build-component.yml
SDK-2025-03-07/: BUILD_SDK_LIBS.sln
SDK-2025-03-07/libPPUI/: libPPUI.vcxproj
SDK-2025-03-07/pfc/: pfc.vcxproj
archive/: TECHNICAL_CONTEXT_V996.md
archive/build-scripts/: BUILD_BASIC_GRID.bat  BUILD_COMPONENT_FINAL.bat  BUILD_ENHANCED.bat  BUILD_FINAL.bat  BUILD_FINAL_COMPONENT.bat  BUILD_FINAL_GRID.bat  BUILD_FULL_UI.bat  BUILD_MINIMAL_V2.bat  BUILD_MINIMAL_WORKING.bat  BUILD_OPTIMIZED.bat  BUILD_PROPER_COMPONENT.bat  BUILD_PROPER_MINIMAL.bat  BUILD_SAFE_MINIMAL.bat  BUILD_SDK_MINIMAL.bat  BUILD_SDK_SAFE.bat  BUILD_SIMPLE.bat  BUILD_TEST.bat  BUILD_THEMED.bat  BUILD_UI_COMPONENT.bat  BUILD_UI_ELEMENT.bat  BUILD_V2.bat  BUILD_V85_FINAL.bat  BUILD_V86_FINAL.bat  BUILD_V87_FINAL.bat  BUILD_V88_FINAL.bat  BUILD_V89_FINAL.bat  BUILD_V8_AUTOFILL.bat  BUILD_V8_FINAL.bat  BUILD_V8_FLUID.bat  BUILD_V8_FLUID_FIXED.bat  BUILD_V90_FINAL.bat  BUILD_V91_FINAL.bat  BUILD_V92_FINAL.bat  BUILD_V93_FINAL.bat  BUILD_V95_FINAL.bat  BUILD_V96_ENHANCED.bat  BUILD_V96_FROM_95.bat  BUILD_V96_FROM_V95_FINAL.bat  BUILD_V96_MINIMAL.bat  BUILD_V96_SIMPLE.bat  (+4 more)
archive/old-sources/: album_art_grid.cpp  album_grid_final.cpp  album_grid_fixed.cpp  album_grid_minimal.cpp  album_grid_minimal_v2.cpp  album_grid_proper.cpp  album_grid_proper_minimal.cpp  album_grid_sdk_minimal.cpp  album_grid_themed.cpp  album_grid_ui.cpp  album_grid_v2.cpp  album_grid_v2_fixed.cpp  foo_albumart_grid_proper.cpp  foo_minimal_safe.cpp  foo_working_component.cpp  grid_component_basic.cpp  grid_final.cpp  grid_optimized.cpp  grid_ui_element.cpp  grid_ui_enhanced.cpp  grid_v84_clean.cpp  grid_v8_auto.cpp  grid_v8_autofill.cpp  grid_v8_final.cpp  grid_v8_fluid.cpp  grid_v8_simple.cpp  grid_v95_artist.cpp  grid_v95_from_v94.cpp  (+12 more)
component/: foo_albumart_grid.vcxproj
docs/: DEV_NOTES_v10_0_44.md  DEV_NOTES_v10_0_47.md
include/: album_art_cache.h  foo_albumart_grid.h  grid_renderer.h
releases/: README.md
resources/: resource.h  resource.rc
src/: album_art_cache.cpp  album_art_grid_complete.cpp  album_art_grid_full.cpp  album_art_grid_v10_0_17_crashfree.cpp  album_art_grid_v10_0_17_fixed.cpp  album_art_grid_v10_0_17_new.cpp  album_art_grid_v10_0_17_simple.cpp  album_art_grid_v10_0_18.cpp  album_art_grid_v10_0_18_exact.cpp  album_art_grid_v10_0_18_minimal.cpp  album_art_grid_v10_0_18_simple.cpp  album_art_grid_v50.cpp  component_client_fixed.cpp  component_complete.cpp  config_dialog.cpp  entry_point.cpp  final_component.cpp  foo_albumart_grid.cpp  foo_albumart_grid_impl.cpp  grid_main.cpp  grid_renderer.cpp  grid_renderer_impl.cpp  main.cpp  main_final.cpp  main_fixed.cpp  metadb_handle_list_helper.cpp  minimal_complete.cpp  minimal_working.cpp  sdk_fixes.h
(+170 files in other folders)
